FQDN/prometheus-ingress.yaml
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx  # 必须配置 nginx
#############################################################
#  rules:
#  - host: grafana.xwc.net  # 访问 Grafana 域名
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: grafana
#          servicePort: 3000
#  - host: prometheus.xwc.net  # 访问 Prometheus 域名
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: prometheus-k8s 
#          servicePort: 9090
#  - host: alertmanager.xwc.net  # 访问 alertmanager 域名
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: alertmanager-main
#          servicePort: 9093
                     
  rules:
  - host: grafana.xwc.net
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: prometheus.xwc.net
    http:
      paths:
      - backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
        path: /
        pathType: Prefix
  - host: alertmanager.xwc.net
    http:
      paths:
      - backend:
          service:
            name: alertmanager-main
            port:
              number: 9093
        path: /
        pathType: Prefix
       # pathType: Exact
